vendor/feedvalidator/demo/testcases/opml/errors/missingBody.opml
<?xml version="1.0" encoding="ISO-8859-1"?>

<!--
  Description:  Missing Body
  Expect:       MissingElement{element:body, parent:opml}
-->

<opml version="1.1">
	<head>
		<title>Missing Body Test</title>
		</head>
	</opml>
